[gd_scene load_steps=7 format=3 uid="uid://dbqi327hovrg7"]

[ext_resource type="Script" uid="uid://d1yo41m5b6amx" path="res://scripts/resources/Placement/Place.gd" id="1_hjoi0"]
[ext_resource type="Resource" uid="uid://b7kpi1wb3pw1o" path="res://scripts/resources/plant_data/Cucumber.tres" id="2_0app1"]
[ext_resource type="PackedScene" uid="uid://ck77k1kovy8d0" path="res://scenes/Flower.tscn" id="3_0app1"]
[ext_resource type="AudioStream" uid="uid://bwlmaf7il8mdd" path="res://Assets/Sound/plant_Pickup_Place_Lockin sfx.mp3" id="4_p2drj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftafd"]
size = Vector2(26, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2drj"]

[node name="TextureRect2" type="Node2D" groups=["Plants"]]
script = ExtResource("1_hjoi0")
plant_data = ExtResource("2_0app1")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-16, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 10.5)
shape = SubResource("RectangleShape2D_ftafd")

[node name="DragTimer" type="Timer" parent="Area2D"]
wait_time = 0.005
ignore_time_scale = true

[node name="RotationTweenTimer" type="Timer" parent="."]
wait_time = 0.01
ignore_time_scale = true

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_p2drj")

[node name="Images" type="Node2D" parent="."]

[node name="Flower" parent="Images" instance=ExtResource("3_0app1")]
shoveledRecess = 10

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p2drj")
volume_db = 24.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="timeout" from="Area2D/DragTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RotationTweenTimer" to="." method="_on_rotation_tween_timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
